@@ -76,6 +76,11 @@ public abstract class JavaTestFrameworkRunnableState<T extends
   private static final Logger LOG = Logger.getInstance(JavaTestFrameworkRunnableState.class);
 
   private static final ExtensionPointName<JUnitPatcher> JUNIT_PATCHER_EP = new ExtensionPointName<>("com.intellij.junitPatcher");
+  private static final String JIGSAW_OPTIONS = "Jigsaw Options";
+
+  public static ParamsGroup getJigsawOptions(JavaParameters parameters) {
+    return parameters.getVMParametersList().getParamsGroup(JIGSAW_OPTIONS);
+  }
 
   protected ServerSocket myServerSocket;
   protected File myTempFile;
@@ -205,7 +210,7 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     return result;
   }
 
-  protected abstract void configureRTClasspath(JavaParameters javaParameters) throws CantRunException;
+  protected abstract void configureRTClasspath(JavaParameters javaParameters, Module module) throws CantRunException;
 
   @Override
   protected JavaParameters createJavaParameters() throws ExecutionException {
@@ -224,8 +229,8 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     finally {
       getConfiguration().setProgramParameters(parameters);
     }
-    javaParameters.getClassPath().addFirst(JavaSdkUtil.getIdeaRtJarPath());
     configureClasspath(javaParameters);
+    javaParameters.getClassPath().addFirst(JavaSdkUtil.getIdeaRtJarPath());
 
     for (JUnitPatcher patcher : JUNIT_PATCHER_EP.getExtensionList()) {
       patcher.patchJavaParameters(project, module, javaParameters);
@@ -358,7 +363,7 @@ public abstract class JavaTestFrameworkRunnableState<T extends
     else {
       JavaParametersUtil.configureProject(getConfiguration().getProject(), javaParameters, pathType, jreHome);
     }
-    configureRTClasspath(javaParameters);
+    configureRTClasspath(javaParameters, module);
   }
 
   protected static PsiJavaModule findJavaModule(Module module, boolean inTests) {
@@ -366,11 +371,15 @@ public abstract class JavaTestFrameworkRunnableState<T extends
       .computeWithAlternativeResolveEnabled(() -> JavaModuleGraphUtil.findDescriptorByModule(module, inTests));
   }
 
-  private static void configureModulePath(JavaParameters javaParameters, @NotNull Module module) {
+  private void configureModulePath(JavaParameters javaParameters, @NotNull Module module) {
     PsiJavaModule testModule = findJavaModule(module, true);
     if (testModule != null) {
       //adding the test module explicitly as it is unreachable from `idea.rt`
-      ParametersList vmParametersList = javaParameters.getVMParametersList();
+      ParametersList vmParametersList = javaParameters
+        .getVMParametersList()
+        .addParamsGroup(JIGSAW_OPTIONS)
+        .getParametersList();
+
       vmParametersList.add("--add-modules");
       vmParametersList.add(testModule.getName());
       //setup module path
@@ -391,7 +400,7 @@ public abstract class JavaTestFrameworkRunnableState<T extends
    * Put dependencies reachable from module-info located in production sources on the module path
    * leave all other dependencies on the class path as is
    */
-  private static void splitDepsBetweenModuleAndClasspath(JavaParameters javaParameters, Module module, PsiJavaModule prodModule) {
+  private void splitDepsBetweenModuleAndClasspath(JavaParameters javaParameters, Module module, PsiJavaModule prodModule) {
     CompilerModuleExtension compilerExt = CompilerModuleExtension.getInstance(module);
     if (compilerExt == null) return;
 
@@ -400,22 +409,47 @@ public abstract class JavaTestFrameworkRunnableState<T extends
 
     putDependenciesOnModulePath(modulePath, classPath, prodModule);
 
-    ParametersList vmParametersList = javaParameters.getVMParametersList();
+    ParametersList vmParametersList = javaParameters.getVMParametersList()
+      .addParamsGroup(JIGSAW_OPTIONS)
+      .getParametersList();
+    String prodModuleName = prodModule.getName();
+
     //ensure test output is merged to the production module
     VirtualFile testOutput = compilerExt.getCompilerOutputPathForTests();
     if (testOutput != null) {
       vmParametersList.add("--patch-module");
-      vmParametersList.add(prodModule.getName() + "=" + testOutput.getPath());
+      vmParametersList.add(prodModuleName + "=" + testOutput.getPath());
     }
 
     //ensure test dependencies missing from production module descriptor are available in tests
     //todo enumerate all test dependencies explicitly
     vmParametersList.add("--add-reads");
-    vmParametersList.add(prodModule.getName() + "=ALL-UNNAMED");
+    vmParametersList.add(prodModuleName + "=ALL-UNNAMED");
+
+    //open packages with tests to test runner
+    List<String> opensOptions = new ArrayList<>();
+    collectPackagesToOpen(opensOptions);
+    for (String option : opensOptions) {
+      vmParametersList.add("--add-opens");
+      vmParametersList.add(prodModuleName + "/" + option + "=ALL-UNNAMED");
+    }
 
     //ensure production module is explicitly added as test starter in `idea-rt` doesn't depend on it
     vmParametersList.add("--add-modules");
-    vmParametersList.add(prodModule.getName());
+    vmParametersList.add(prodModuleName);
+  }
+
+  protected void collectPackagesToOpen(List<String> options) { }
+
+  /**
+   * called on EDT
+   */
+  protected static void collectSubPackages(List<String> options, PsiPackage aPackage, GlobalSearchScope globalSearchScope) {
+    options.add(aPackage.getQualifiedName());
+    PsiPackage[] subPackages = aPackage.getSubPackages(globalSearchScope);
+    for (PsiPackage subPackage : subPackages) {
+      collectSubPackages(options, subPackage, globalSearchScope);
+    }
   }
 
   protected static void putDependenciesOnModulePath(PathsList modulePath,
@@ -538,12 +572,28 @@ public abstract class JavaTestFrameworkRunnableState<T extends
 
           if (classpath == null) {
             final JavaParameters parameters = new JavaParameters();
-            parameters.getClassPath().add(JavaSdkUtil.getIdeaRtJarPath());
-             try {
-               configureRTClasspath(parameters);
-               JavaParametersUtil.configureModule(module, parameters, JavaParameters.JDK_AND_CLASSES_AND_TESTS,
-                                                 getConfiguration().isAlternativeJrePathEnabled() ? getConfiguration().getAlternativeJrePath() : null);
+            try {
+              JavaParametersUtil.configureModule(module, parameters, JavaParameters.JDK_AND_CLASSES_AND_TESTS,
+                                                 getConfiguration().isAlternativeJrePathEnabled() ? getConfiguration()
+                                                   .getAlternativeJrePath() : null);
+              if (JavaSdkUtil.isJdkAtLeast(parameters.getJdk(), JavaSdkVersion.JDK_1_9)) {
+                configureModulePath(parameters, module);
+              }
+              configureRTClasspath(parameters, module);
+              parameters.getClassPath().add(JavaSdkUtil.getIdeaRtJarPath());
               wWriter.println(parameters.getClassPath().getPathsString());
+              wWriter.println(parameters.getModulePath().getPathsString());
+              ParamsGroup paramsGroup = getJigsawOptions(parameters);
+              if (paramsGroup == null) {
+                wWriter.println(0);
+              }
+              else {
+                List<String> parametersList = paramsGroup.getParametersList().getList();
+                wWriter.println(parametersList.size());
+                for (String option : parametersList) {
+                  wWriter.println(option);
+                }
+              }
             }
             catch (CantRunException e) {
               wWriter.println(javaParameters.getClassPath().getPathsString());
